--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./template.css">
         <link rel="stylesheet" href="./font-awesome5.css">
 
-        <script type="module" src="./vue.global.prod.js"></script>
+        <script src="./vue.global.prod.js"></script>
         <script src="./vue-router.global.js"></script>
         <script src="./axios.min.js"></script>
         <script src="./chart.js"></script>
@@ -21,6 +21,7 @@
         </div>
     </body>
 </html>s
+
 
 
 
